[package]
name = "flutterby"
version = "0.1.0"
authors = ["wez"]
build = "build.rs"

[features]
default = ["feather32u4"]
teensy2 = ["clock_16mhz"]
feather32u4 = ["clock_8mhz"]
clock_8mhz = []
clock_16mhz = []
simavr = []

[build-dependencies]
avr-mcu = "0.2.2"
ident_case = "^1.0.0"

[dependencies]
volatile-register = "0.2.0"
bare-metal = "0.1.1"
arrayvec = {version="0.4.6", default-features=false}
futures = {git = "https://github.com/wez/futures-rs", branch="avr", default-features=false}

[profile.dev]
#opt-level = 2
opt-level = "s"
debug-assertions = true
panic = "abort"

[profile.release]
opt-level = "s"
debug = true
panic = "abort"
